welcome.lessons.welcome.array.has271.Has271.scala.error
has271:10: error: overloaded method value abs with alternatives:
  (x: Double)Double <and>
  (x: Float)Float <and>
  (x: Long)Long <and>
  (x: Int)Int
 cannot be applied to (Boolean)
		if((b==(5+a))&&math.abs((a-c)<=2)){
                                    ^